# Douya-Code

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
src/agent/: agent_loop.rs  conversation.rs  mod.rs  prompt.rs  tool_handler.rs
src/api/: client.rs  mod.rs  models.rs  streaming.rs  types.rs
src/config/: cli.rs  mod.rs  settings.rs
src/tools/: bash.rs  edit.rs  glob.rs  grep.rs  ls.rs  mod.rs  read.rs  todo.rs  write.rs
src/tui/: app.rs  chat_view.rs  event.rs  input_view.rs  markdown.rs  mod.rs  status_bar.rs  thinking_view.rs
src/utils/: fs.rs  mod.rs  security.rs  utf8.rs
